--- a/environment_morgana.yml
+++ b/environment_morgana.yml
@@ -108,7 +108,7 @@ dependencies:
   - requests=2.25.1=pyhd3deb0d_0
   - requests-oauthlib=1.3.0=pyh9f0ad1d_0
   - rsa=4.7.2=pyh44b312d_0
-  - scikit-image=0.18.1=py38h4c96930_0
+  - scikit-image=0.18.0
   - scikit-learn=0.24.2=py38h5d5d464_0
   - scipy=1.6.3=py38he847743_0
   - setuptools=49.6.0=py38haa244fe_3
